BusOne02/src/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>zvod_Address_Sample_Send_Status_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place valid address indicator for sample send status on layout</description>
        <label>zvod_Address.Sample_Send_Status_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Address_vod_c_DEA_Status_vod_c_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place DEA sample status indicator on layout.</description>
        <label>zvod_Address_vod__c.DEA_Status_vod__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Attachments_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Attachments section on layout.</description>
        <label>zvod_Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Attendees_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place attendee section on layout.</description>
        <label>zvod_Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Business_Account_vod__c</fullName>
        <description>Placeholder for the special logic on the Call Report Page.</description>
        <label>Location</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_CLMDetails_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place CLM Details section on layout.</description>
        <label>zvod_CLMDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Call_Conflict_Status_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Warning of potential call schedule conflicts</description>
        <label>Call Conflict Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Call_Objective_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field to determine where to display the call objective selector on the call report page</description>
        <label>zvod_Call_Objective_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Check_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that adds Check In button on Call Report page</description>
        <label>zvod_Check_In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CoBrowse_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place CoBrowse section on layout.</description>
        <label>zvod_CoBrowse_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Delete_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place delete button on layout.</description>
        <label>zvod_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Detailing_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Detailing section on layout.</description>
        <label>zvod_Detailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Entity_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides single placeholder for rendering the Account, Contact or User label/hyperlink.</description>
        <label>zvod_Call2_vod__c.Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Expenses_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Expenses section on layout.</description>
        <label>zvod_Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Followup_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Follow-up Activities section on layout.</description>
        <label>zvod_Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Key_Messages_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Marker field used to place Key Messages section on layout.</description>
        <label>zvod_Key_Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Medical_Discussion_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Medical Discussions on the page layout.</description>
        <label>zvod_Medical_Discussion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Medical_Inquiry_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to display Medical Inquiry Fulfillment records within an Interaction Report and to capture associated Responses.</description>
        <label>zvod_Medical_Inquiry_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_More_Actions_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place More Actions button on page layout.</description>
        <label>zvod_More_Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Discussion_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Product Discussion section on layout.</description>
        <label>zvod_Product_Discussion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Sample_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Sample Opt In status on layout.</description>
        <label>zvod_Sample_Opt_In_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Samples_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Samples section on layout.</description>
        <label>zvod_Samples</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_SaveNew_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place &quot;Save&amp;New&quot; button on layout.</description>
        <label>zvod_SaveNew_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Save_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Save button on layout.</description>
        <label>zvod_Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Submit_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Submit button on layout.</description>
        <label>zvod_Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Survey_Target_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Survey Target section on layout.</description>
        <label>zvod_Survey_Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Surveys_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field used to place Survey section on layout.</description>
        <label>zvod_Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Unique_Group_Activities_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field which allows users to capture unique detail and sampling information for each attendee on a call to a Business Account.</description>
        <label>zvod_Unique_Group_Activities_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{000000000}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <recordTypes>
        <fullName>CallReport_vod</fullName>
        <active>true</active>
        <label>Call Report_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoBrowse_Interaction</fullName>
        <active>true</active>
        <label>CoBrowse Interaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_vod</fullName>
        <active>true</active>
        <description>Record type to support Event-based Call Reports</description>
        <label>Event_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSLMeetingBrief_vod</fullName>
        <active>true</active>
        <label>MSL Meeting Brief_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Inquiry_Fulfillment_vod</fullName>
        <active>true</active>
        <description>Call record created to capture the fulfillment of a medical inquiry record.</description>
        <label>Medical_Inquiry_Fulfillment_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>MeetingBrief_vod</fullName>
        <active>true</active>
        <description>Meeting Brief</description>
        <label>Meeting Brief_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting</fullName>
        <active>true</active>
        <description>Used to support Engage meetings</description>
        <label>Remote Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_Group</fullName>
        <active>true</active>
        <description>Used to support Engage meetings with groups</description>
        <label>Remote Meeting - Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remote_Meeting_Individual</fullName>
        <active>true</active>
        <description>Used to support Engage meetings with a single individual</description>
        <label>Remote Meeting - Individual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>